Add City entity, repository and service. With given configuration we could now switch between dev and prod environment.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <p th:text="|From controller: ${message}|">Thymeleaf is working!!</p>
+    <ol>
+        <li th:each="city : ${cities}" th:text="|${city.name} - ${city.country}|" />
+    </ol>
 </body>
 </html>
 
